--- a/src/main/resources/assets/gvc/lang/ja_JP.lang
+++ b/src/main/resources/assets/gvc/lang/ja_JP.lang
@@ -45,3 +45,4 @@ menu.gman.donate=寄付しましょう
 menu.gman.supportGliby=Glibyをサポートしましょう
 menu.gman.supportGliby.description=Glibyはこのモッドを発明したひとです。サポートしましょう。寄付の影響で、モッドを作る人たはもっといいものをつくれます。アップデートもできます。たくさんのサポートでも少しのサポートでも、お気持ち全てに感謝します。本当にありがとうございます。
 menu.gman.supportGliby.contact=連絡, §a@theGliby§f on Twitter, or by email §bcontact@gliby.net§f.
+menu.gman.supportIvasik=Ivasikをサポートしましょう
