--- a/src/main/resources/assets/gvc/lang/lv_LV.lang
+++ b/src/main/resources/assets/gvc/lang/lv_LV.lang
@@ -43,3 +43,4 @@ menu.setupWizardPageThree=$n$n$n$n$n$n$n$nPalielināt līmeni, tas ir obligāts,
 menu.setupWizardPageFour=Esat pabeidzis §aGliby ir §7Voice Chat§f uzstādīšanu, ja vēlaties mainīt papildu iestatījumus, atveriet opcijas, nospiežot §n$a$n$nBalss pārraidītīšanu var iedarbināt arī ar §n$b§f$n$n Šo Iestatīšanas vedni var atvērt iespējas atkal ja nepieciešams, var doties atpakaļ un mainīt iestatījumus, nospiežot uz pogas "Iepriekšējais".
 menu.gman.donate=Ziedot
 menu.gman.supportGliby=Dēvāt Gliby
+menu.gman.supportIvasik=Dēvāt Ivasik
