--- a/src/main/resources/assets/gvc/lang/ru_RU.lang
+++ b/src/main/resources/assets/gvc/lang/ru_RU.lang
@@ -41,3 +41,4 @@ menu.setupWizardPageOne=Мастер настройки поможет вам н
 menu.setupWizardPageTwo=$n$n$n$n$nВыберите ваш микрофон, если не знаете что выбирать, оставьте §n'Primary Sound Capture Driver.'
 menu.setupWizardPageThree=$n$n$n$n$n$n$n$nОтрегулируйте уровень усиления, это необходимо если вас плохо слышно. Рекомендуется выставить регулятор в пределах §aЗеленой §fи §eЖелтой §fзоны, или вас качество звука будет плохим.
 menu.setupWizardPageFour=Вы закончили настройку §aGliby's §7Voice Chat§f, хотите больше?  Войдите в настройки нажав §n$a.$n$nГолосовой чат активируется с помощью клавиши §n$b§f$n$nМастер может быть открыт из настроек повторно, сейчас вы можете вернуться назад нажав кнопку 'Назад'.
+menu.gman.supportIvasik=Поддержать Ivasik
