--- a/src/main/resources/assets/gvc/lang/de_DE.lang
+++ b/src/main/resources/assets/gvc/lang/de_DE.lang
@@ -41,3 +41,4 @@ menu.setupWizardPageOne=Dieser Setup-Assistent kann bei der Konfiguration von Vo
 menu.setupWizardPageTwo=$n$n$n$n$nWählen sie Ihr Eingabegerät, wenn Sie ihre Standard-Eingabegerät nicht kennen wählen sie §n"Primary Sound Capture Driver."
 menu.setupWizardPageThree=$n$n$n$n$n$n$n$nStellen sie Ihr Verstärkungslevel ein, dies ist erforderlich, wenn Ihr Eingabegerät zu leise ist. Es wird empfohlen,im der §aGreen §fbiso §eYellow §fBereich zu bleiben, sonst wäre die Sprachqualität schlecht.
 menu.setupWizardPageFour=Sie haben das wichtigste für §aGliby §7Voice Chat§f konfiguriertF wollen Sie weitere Einstellungen ändern, gehen Sie zu den Optionen durch Drücken von §n$a.$n$nDer Chat kann mit §n$b aktiviert werden.§f$n$nDer Setup-Assistent kann in den Optionen noch einmal geöffnet werden falls erforderlich. Sie können nun zurück und Einstellungen durch Drücken von 'Zurück' ändern.
+menu.gman.supportIvasik=Unterstützung Ivasik
