--- a/src/main/resources/assets/gvc/lang/en_US.lang
+++ b/src/main/resources/assets/gvc/lang/en_US.lang
@@ -45,3 +45,4 @@ menu.gman.donate=Donate
 menu.gman.supportGliby=Support Gliby
 menu.gman.supportGliby.description=Support the creator of the mod, Gliby, by donating any amount you choose. Donations encourage and directly support mod developers, consider donating if you like the mod and wish to help developers!
 menu.gman.supportGliby.contact=You can reach Gliby at §a@theGliby§f on twitter, or by email §bcontact@gliby.net§f.
+menu.gman.supportIvasik=Support Ivasik
